--- a/creditos-web/WebContent/WEB-INF/web.xml
+++ b/creditos-web/WebContent/WEB-INF/web.xml
@@ -3,13 +3,13 @@
   <display-name>creditos-web</display-name>
     
   <servlet>
-    <servlet-name>greetServlet</servlet-name>
-    <servlet-class>com.jgroup.creditos.server.GreetingServiceImpl</servlet-class>
+    <servlet-name>cotizacionServlet</servlet-name>
+    <servlet-class>com.jgroup.creditos.server.CotizacionServiceImpl</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>greetServlet</servlet-name>
-    <url-pattern>/greet</url-pattern>
+    <servlet-name>cotizacionServlet</servlet-name>
+    <url-pattern>/cotizacion</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
