--- a/Creditos/conf/hibernate.properties
+++ b/Creditos/conf/hibernate.properties
@@ -3,10 +3,10 @@
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.connection.driver_class=org.postgresql.Driver
 hibernate.connection.username=postgres
-hibernate.connection.password=postgres
+hibernate.connection.password=jgroup
 
 # HSQLDB in-memory for unit testing
-hibernate.connection.url=jdbc:postgresql://localhost:5432/creditos
+hibernate.connection.url=jdbc:postgresql://localhost:5432/Creditos
 
 # This will clear all data and create empty tables. That's perfect for unit testing.
 # NOTE! Be careful to not use this against a production database!
